corrections of names and missspeliing

--- a/LebenslaufKomplet/Lebenslauf.tex
+++ b/LebenslaufKomplet/Lebenslauf.tex
@@ -49,7 +49,7 @@ Staatsangeh\"origkeit: italienisch,deutsch
 \begin{cvlist}{Berufserfahrung}
 
 \item[04.2012-heute] Deutsches Elektronen-Synchrotron DESY Hamburg,
-Maschine Strahl Kontrolle (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
+Maschine Strahl Kontrollen (MSK) Gruppe, Wissenschaftlicher Mitarbeiter\\
 
 Aufgaben:\\
 
