--- a/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
+++ b/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
@@ -27,7 +27,7 @@ Wedeler Landstra{\ss}e 157\\
 \opening{Sehr geehrte Damen und Herren,} 
 
 mein Name ist Michele Viti. Neulich habe
-ich das Stellenangebot der Bundesanstalt f{u}r Wasserbau mit gro{\ss}em
+ich das Stellenangebot der Bundesanstalt f{\"u}r Wasserbau mit gro{\ss}em
 Interesse gelesen und m{\"o}chte mich darauf bewerben. \\ 
 % W\"ahrend meiner
 % Berufserfahrung habe ich mich mit Datenprozessierung, Datenauswertung
@@ -49,18 +49,17 @@ zu Berlin im Fachbereich Teilchen-/Beschleunigerphysik promoviert. In
 meinen Studien handelte es sich um Simulation und Test wichtiger
 Komponenten von Teilchenbeschleunigern und Detektoren.\\
 \indent Nach dem erfolgreichen Abschluss meiner Promotion habe ich in Januar
-2010 eine Stelle als wissenschaflticher Mitarbeiter am Forschungsinstitut DESY
+2010 eine Stelle als wissenschaftlicher Mitarbeiter am Forschungsinstitut DESY
 in Hamburg angenommen. In DESY Hamburg habe ich in verschiedenen Gruppen
 gearbeitet, n{\"a}mlich die ATLAS Experiment Gruppe, die Strahlendetektor Gruppe
-und die Maschine Strahlkontrolle (MSK) Gruppe wo ich momentan t{\"a}tig bin. \\
+und die Maschine Strahlkontrollen (MSK) Gruppe wo ich momentan t{\"a}tig bin. \\
 Innerhalb des ATLAS Experiments habe ich am Projekt ALPHA teilgenommen wo
 ich die "`Data Preparation"' Gruppe geleitet habe, die f{\"u}r die Aufbereitung
 von gro{\ss}en Mengen von Daten zust{\"a}ndig und an der physikalischen
 Datenanalyse beteiligt war.\\
-In the Strahlendetektor Gruppe habe ich an der Entwicklung eines
-Softwareframeworks f\"ur die Datenverarbeitung und Datenauswertung und der
-Software f{\"u}r das Data Acquisition System f\"ur ein neuen bildgebenden CMOS
-Detektor gearbeitet.\\
+In the Strahlendetektor Gruppe habe ich das Softwareframeworks f\"ur die
+Datenverarbeitung und Datenauswertung und die Software f{\"u}r das Data
+Acquisition System f\"ur ein neuen bildgebenden CMOS Detektor entwickelt.\\
 In der aktuellen Gruppe, die MSK Gruppe, bin ich zust{\"a}ndig f{\"u}r die
 Software f{\"u}r Regelsysteme und Datenerfassung von Messger{\"a}ten an
 Teilchenbeschleunigern und f{\"u}r die Kontrolle von Schrittmotoren.\\
@@ -68,10 +67,10 @@ Teilchenbeschleunigern und f{\"u}r die Kontrolle von Schrittmotoren.\\
 Grundlagenforschung und Entwicklung, wo eine l{\"o}sungsorientierte Denkweise
 und Selbstst\"andigkeit erfordert sind. Meine T{\"a}tigkeiten in DESY haben sich
 im Laufe der Jahre von rein physikalischen Aufgaben zu mehr technischen
-entwickelt. Deswegen kann ich eine excellente Kombination von Physikkenntnissen
+entwickelt. Deswegen kann ich eine exzellente Kombination von Physikkenntnissen
 und Erfahrung mit professionellen Methoden in der Softwareentwicklung
 anbieten.\\ 
-\indent Alle diese Qu{\"a}lit{\"a}ten entsprechen sehr gut den Anforderungen
+\indent Alle diese Qualit{\"a}ten entsprechen sehr gut den Anforderungen
 dieser Stellte als wissenschaftlicher Mitarbeiter. \"Uber eine Einladung zu
 einem pers\"onlichen Vorstellungsgespr\"ach w\"urde ich mich sehr freuen.
 
