--- a/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
+++ b/WissenschaftlicherMitarbeiterBAW/Anschreiben.tex
@@ -26,9 +26,9 @@ Wedeler Landstra{\ss}e 157\\
 
 \opening{Sehr geehrte Damen und Herren,} 
 
-mein Name ist Michele Viti. Neulich habe
-ich das Stellenangebot der Bundesanstalt f{\"u}r Wasserbau mit gro{\ss}em
-Interesse gelesen und m{\"o}chte mich darauf bewerben. \\ 
+mein Name ist Michele Viti. ich habe das Stellenangebot in der Bundesanstalt
+f{\"u}r Wasserbau mit gro{\ss}em Interesse gelesen und m{\"o}chte mich darauf
+bewerben. \\
 % W\"ahrend meiner
 % Berufserfahrung habe ich mich mit Datenprozessierung, Datenauswertung
 % und der entsprechenden Softwareentwicklung besch{\"a}ftigt.
@@ -46,33 +46,34 @@ Interesse gelesen und m{\"o}chte mich darauf bewerben. \\
 \indent An der Perugia Universit\"at in Italien habe ich Physik studiert. Im
 Anschluss daran habe ich in Deutschland an der Humboldt Universit\"at
 zu Berlin im Fachbereich Teilchen-/Beschleunigerphysik promoviert. In
-meinen Studien handelte es sich um Simulation und Test wichtiger
+meinen Studien ging es um Simulation und Test wichtiger
 Komponenten von Teilchenbeschleunigern und Detektoren.\\
 \indent Nach dem erfolgreichen Abschluss meiner Promotion habe ich in Januar
 2010 eine Stelle als wissenschaftlicher Mitarbeiter am Forschungsinstitut DESY
 in Hamburg angenommen. In DESY Hamburg habe ich in verschiedenen Gruppen
-gearbeitet, n{\"a}mlich die ATLAS Experiment Gruppe, die Strahlendetektor Gruppe
-und die Maschine Strahlkontrollen (MSK) Gruppe wo ich momentan t{\"a}tig bin. \\
+gearbeitet, n{\"a}mlich in der ATLAS Experiment Gruppe, in der Strahlendetektor
+Gruppe und in der Maschine Strahlkontrollen (MSK) Gruppe wo ich momentan
+t{\"a}tig bin. \\
 Innerhalb des ATLAS Experiments habe ich am Projekt ALPHA teilgenommen wo
 ich die "`Data Preparation"' Gruppe geleitet habe, die f{\"u}r die Aufbereitung
 von gro{\ss}en Mengen von Daten zust{\"a}ndig und an der physikalischen
 Datenanalyse beteiligt war.\\
-In the Strahlendetektor Gruppe habe ich das Softwareframeworks f\"ur die
+In der Strahlendetektor Gruppe habe ich das Softwareframeworks f\"ur die
 Datenverarbeitung und Datenauswertung und die Software f{\"u}r das Data
 Acquisition System f\"ur ein neuen bildgebenden CMOS Detektor entwickelt.\\
-In der aktuellen Gruppe, die MSK Gruppe, bin ich zust{\"a}ndig f{\"u}r die
+In der aktuellen Gruppe, der MSK Gruppe, bin ich zust{\"a}ndig f{\"u}r die
 Software f{\"u}r Regelsysteme und Datenerfassung von Messger{\"a}ten an
 Teilchenbeschleunigern und f{\"u}r die Kontrolle von Schrittmotoren.\\
-\indent Bei DESY engagiere ich mich mit komplexen Problemen in der modernen
+\indent Bei DESY engagiere ich mich bei komplexen Problemen in der modernen
 Grundlagenforschung und Entwicklung, wo eine l{\"o}sungsorientierte Denkweise
 und Selbstst\"andigkeit erfordert sind. Meine T{\"a}tigkeiten in DESY haben sich
 im Laufe der Jahre von rein physikalischen Aufgaben zu mehr technischen
-entwickelt. Deswegen kann ich eine exzellente Kombination von Physikkenntnissen
-und Erfahrung mit professionellen Methoden in der Softwareentwicklung
-anbieten.\\ 
+entwickelt. Daher verf{\"u}ge ich {\"u}ber eine sehr gute Kombination von
+Physikkenntnissen und Erfahrung mit professionellen Methoden in der
+Softwareentwicklung.\\
 \indent Alle diese Qualit{\"a}ten entsprechen sehr gut den Anforderungen
 dieser Stellte als wissenschaftlicher Mitarbeiter. \"Uber eine Einladung zu
-einem pers\"onlichen Vorstellungsgespr\"ach w\"urde ich mich sehr freuen.
+einem pers\"onlichen Vorstellungsgespr\"ach freue ich mich sehr.
 
 % 
 % Nach dem erfolgreichen Abschluss meiner Promotion habe ich eine Stelle
