finalize applcaition for XFEL

--- a/DESY/AnschreibenEN.tex
+++ b/DESY/AnschreibenEN.tex
@@ -50,14 +50,14 @@ of the ADCs and measuring the resolution of the detector.\\
 In the MSK group I'm currently developing the software for the slow
 control and data acquisition for the beam arrival time monitors at FLASH I/II
 and XFEL and the library for the stepper motor control.\\
-\indent Starting as a pure physicist, I moved through these years to more
-engineering tasks. This was driven by both personal interest and work necessity. This
-evolution matured in the current group where I have the chance to work
-together with pure programmers and software engineers.\\
-\indent What I can offer for this position is an excellent combination of very
-good physics knowledge and professional experience in the software development,
-especially for slow control, data acquisition and analysis for measuring
-instruments and photon detectors.
+\indent Starting as a pure physicist, I moved in these years to more
+engineering tasks. This was driven by both personal interest and work necessity.
+This evolution matured in the current group where I work together with
+programmers and software engineers.\\
+\indent What I can offer for this position is a very good combination of physics
+knowledge and professional experience in the software development, especially
+for slow control, data acquisition and analysis for measuring instruments and
+photon detectors.
 
 \closing{with best regards}
 \enlargethispage{6\baselineskip}
