--- a/LebenslaufStandard/LebenslaufEN.tex
+++ b/LebenslaufStandard/LebenslaufEN.tex
@@ -49,8 +49,8 @@ Nationality: italian, german
 
 {\scshape {\bfseries Projects:}}
 \begin{description}
-\item[04.2012-today] Development of the instrumentations for beam control
-feedback and sychronisation systems for the accellerators XFEL and FLASH I/II in
+\item[04.2012-today] Development of the software for instrumentations for beam
+control feedback and sychronisation systems for the accellerators XFEL and FLASH I/II in
 DESY.
 \item[06.2012-03.2015]Project PERCIVAL, Developement of a CMOS imaging
 detector
