anschreiben für bewerbung im Institut Dr. Rampitsch

--- a/InstitutDrRampitsch/Anschreiben.tex
+++ b/InstitutDrRampitsch/Anschreiben.tex
@@ -15,16 +15,16 @@
 \begin{document}
 \pagestyle{empty}
 
-\begin{letter}{ Privatakademie – Institut Dr.~Rampitsch\
+\begin{letter}{Privatakademie - Institut Dr.~Rampitsch\\
 Poststra{\ss}e 51\\ 
 20354 Hamburg}
 
 \setkomavar{date}{\today}
-\setkomavar{subject}{Bewerbung als Physik Lehrer} 
+\setkomavar{subject}{Bewerbung als Physiklehrer} 
 
 \opening{Sehr geehrte Damen und Herren,} 
 
-ich m{\"o}chte mich f{\"u}r die Stelle als Physik Lehrer im Institut
+ich m{\"o}chte mich auf die Stelle als Physiklehrer im Institut
 Dr.~Rampitsch bewerben.
 %{\"U}ber die Webseite der Stadt Hamburg habe
 %ch das Stellenangebot mit gro{\ss}em Interesse gelesen und m{\"o}chte mich darauf bewerben.
