several changes for Studieordnung

--- a/Vorbereitungsdienst/Studienordnung.tex
+++ b/Vorbereitungsdienst/Studienordnung.tex
@@ -11,14 +11,14 @@
 \begin{document}
 \pagestyle{empty}
 \begin{center}
-  \huge{Studienprogramm}
+  \huge{Studienordnung}
 \end{center}
 \vspace{1cm}
 
 Im Folgenden wird die Studienordnung des Studiengangs in Physik der
-Perugia Universit\"at erkl\"art. Dies bezieht sich auf die Seiten 3 - 12 des
-Dokumentes `Notiziario facolt\`a di scienze matematiche fisiche e naturali,
-corso di laurea in Fisica''.\\
+Perugia Universit\"at zusammengefasst. Die Zusammenfassung beruht auf den
+Seiten 3 - 12 des Dokumentes `Notiziario facolt\`a di scienze matematiche
+fisiche e naturali, corso di laurea in Fisica''.\\
 
 Die Dauer des Studiengangs in Physik betr\"agt 4 Jahre.\\
 
@@ -34,24 +34,26 @@ entsprechende Studienplan muss erstellt werden. Die Auswahl muss binnen dem
 dritten Jahr erfolgen.\\
 
 Die von mir ausgew\"ahlte Spezialisierung ``Atomare und Subatomare Physik''
-sieht f\"ur das letzte Jahr 3 Zwei-Semester und 2 Ein-Semester Pr\"ufungen vor.
+sieht f\"ur das letzte Jahr 3 Zwei-Semester und 2 Ein-Semester Kurse vor.
 \\
 
-F\"ur die Unterrichte besteht keine Anwesenheitspflicht und f\"ur die
-Absolvierung der Pr\"ufungen keine Zeitfrist.
+F\"ur die Unterrichte besteht keine Anwesenheitspflicht. Nach dem Abschluss
+eines Kurses ist es vorgesehen eine Pr\"ufung \"uber den Inhalt des Kurses (in
+der Regel schriftlich und m\"undlich) abzulegen. F\"ur die Ablegung der
+Pr\"ufung besteht keine Zeitfrist.\\
 
-Die erfolgreiche Absolvierung der Pr\"ufungen Mathematische Analyse I und II und
-Allgemeine Physik I und II ist Voraussetzung f\"ur die Ablegung der Pr\"ufungen
-des dritten und vierten Jahres.\\
+Die erfolgreiche Absolvierung der Pr\"ufungen f\"ur die Kurse Mathematische
+Analyse I und II und Allgemeine Physik I und II ist Voraussetzung f\"ur die Ablegung der
+Pr\"ufungen f\"ur die Kurse des dritten und vierten Jahres.\\
 
 Die Zulassung zur Verteidigung der Abschlussarbeit (Diplomarbeit) erfolgt f\"ur
 den Studiengang mit Spezialisierung ``Atomare und Subatomare Physik'' nach der
-erfolgreichen Absolvierung von 17 Zweisemesterpr\"ufungen und 2
-Einsemesterpr\"ufungen.\\
+erfolgreichen Absolvierung der Pr\"ufungen von 17 Zweisemesterkurse und 2
+Einsemesterkurse.\\
 
 Das Thema der Diplomarbeit muss der Spezialisierung zugeh\"orig sein.\\
 
-Es folgt eine Tabelle mit den abgelegten Pr\"ufungen (siehe Dokument
+Es folgt eine Tabelle mit den abgelegten Pr\"ufungen (siehe auch das Dokument
 Diplomzeugnis).
 
 \newpage
@@ -61,7 +63,7 @@ Diplomzeugnis).
 \centering
 \begin{tabular}{p{5cm}cl}
 \toprule
-\textbf{Pr\"ufung} & \textbf{Dauer}                      &
+\textbf{Kurs} & \textbf{Dauer}                      &
 \multicolumn{1}{c}{\textbf{Notiz}}
 \\
 \midrule
