--- a/Vorbereitungsdienst/Studienordnung.tex
+++ b/Vorbereitungsdienst/Studienordnung.tex
@@ -11,47 +11,48 @@
 \begin{document}
 \pagestyle{empty}
 \begin{center}
-  \huge{Studienprogramm}
+  \huge{Studienordnung}
 \end{center}
 \vspace{1cm}
 
 Im Folgenden wird die Studienordnung des Studiengangs in Physik der
-Perugia Universit\"at erkl\"art. Dies bezieht sich auf die Seiten 3 - 12 des
+Perugia Universit\"at zusammengefasst. Die Zusammenfassung beruht auf den Seiten 3 - 12 des
 Dokumentes `Notiziario facolt\`a di scienze matematiche fisiche e naturali,
 corso di laurea in Fisica''.\\
 
 Die Dauer des Studiengangs in Physik betr\"agt 4 Jahre.\\
 
 Der Studiengang ist in zwei Teilen organisiert. Die ersten drei Jahre bestehen
-aus 14 Basiskursen und jeder Kurs hat eine Dauer von zwei Semestern (ein
+aus 14 Basiskursen. Jeder Kurs hat eine Dauer von zwei Semestern (ein
 Jahr).\\
 
-Binnen dem zweiten Jahr m\"ussen Kenntnisse einer fremden Sprache (in der Regel
+Sp\"atestens im zweiten Jahr m\"ussen Kenntnisse einer Fremdsprache (in der Regel
 Englisch oder Franz\"osisch) nachgewiesen werden.\\
 
 F\"ur das letzte Jahr ist die Auswahl einer Spezialisierung erforderlich und der
-entsprechende Studienplan muss erstellt werden. Die Auswahl muss binnen dem
+entsprechende Studienplan muss erstellt werden. Die Auswahl muss sp\"atestens im 
 dritten Jahr erfolgen.\\
 
 Die von mir ausgew\"ahlte Spezialisierung ``Atomare und Subatomare Physik''
-sieht f\"ur das letzte Jahr 3 Zwei-Semester und 2 Ein-Semester Pr\"ufungen vor.
+sieht f\"ur das letzte Jahr 3 Zwei-Semester und 2 Ein-Semester Kurse vor.
 \\
 
-F\"ur die Unterrichte besteht keine Anwesenheitspflicht und f\"ur die
-Absolvierung der Pr\"ufungen keine Zeitfrist.
+F\"ur den Unterricht besteht keine Anwesenheitspflicht. Nach dem Abschluss eines Kurses
+ist eine Pr\"ufung \"uber den Inhalt des Kurses vorgesehen (in der Regel schriftlich  und  m\"undlich abzulegen).\\
+%f\"ur die Absolvierung der Pr\"ufungen keine Zeitfrist.
 
-Die erfolgreiche Absolvierung der Pr\"ufungen Mathematische Analyse I und II und
-Allgemeine Physik I und II ist Voraussetzung f\"ur die Ablegung der Pr\"ufungen
+Die erfolgreiche Absolvierung der Pr\"ufungen f\"ur die Kurse Mathematische Analyse I und II und
+Allgemeine Physik I und II ist Voraussetzung f\"ur die Ablegung der Pr\"ufungen f\"ur die Kurse
 des dritten und vierten Jahres.\\
 
 Die Zulassung zur Verteidigung der Abschlussarbeit (Diplomarbeit) erfolgt f\"ur
 den Studiengang mit Spezialisierung ``Atomare und Subatomare Physik'' nach der
-erfolgreichen Absolvierung von 17 Zweisemesterpr\"ufungen und 2
-Einsemesterpr\"ufungen.\\
+erfolgreichen Absolvierung der Pr\"ufungen von 17 Zweisemesterkursen und 2
+Einsemesterkursen.\\
 
-Das Thema der Diplomarbeit muss der Spezialisierung zugeh\"orig sein.\\
+Das Thema der Diplomarbeit muss der Spezialisierung entsprechen.\\
 
-Es folgt eine Tabelle mit den abgelegten Pr\"ufungen (siehe Dokument
+Es folgt eine Tabelle mit den abgelegten Pr\"ufungen (siehe auch das Dokument
 Diplomzeugnis).
 
 \newpage
