new indentation for Studienordnung

--- a/Vorbereitungsdienst/Studienordnung.tex
+++ b/Vorbereitungsdienst/Studienordnung.tex
@@ -15,16 +15,15 @@
 \end{center}
 \vspace{1cm}
 
-Im Folgenden wird die Studienordnung des Studiengangs in Physik der
-Perugia Universit\"at zusammengefasst. Die Zusammenfassung beruht auf den Seiten 3 - 12 des
-Dokumentes `Notiziario facolt\`a di scienze matematiche fisiche e naturali,
+Im Folgenden wird die Studienordnung des Studiengangs in Physik der Perugia
+Universit\"at zusammengefasst. Die Zusammenfassung beruht auf den Seiten 3 - 12
+des Dokumentes `Notiziario facolt\`a di scienze matematiche fisiche e naturali,
 corso di laurea in Fisica''.\\
 
 Die Dauer des Studiengangs in Physik betr\"agt 4 Jahre.\\
 
 Der Studiengang ist in zwei Teilen organisiert. Die ersten drei Jahre bestehen
-aus 14 Basiskursen. Jeder Kurs hat eine Dauer von zwei Semestern (ein
-Jahr).\\
+aus 14 Basiskursen. Jeder Kurs hat eine Dauer von zwei Semestern (ein Jahr).\\
 
 Sp\"atestens im zweiten Jahr m\"ussen Kenntnisse einer Fremdsprache (in der Regel
 Englisch oder Franz\"osisch) nachgewiesen werden.\\
@@ -34,16 +33,16 @@ entsprechende Studienplan muss erstellt werden. Die Auswahl muss sp\"atestens im
 dritten Jahr erfolgen.\\
 
 Die von mir ausgew\"ahlte Spezialisierung ``Atomare und Subatomare Physik''
-sieht f\"ur das letzte Jahr 3 Zwei-Semester und 2 Ein-Semester Kurse vor.
-\\
+sieht f\"ur das letzte Jahr 3 Zwei-Semester und 2 Ein-Semester Kurse vor.\\
 
-F\"ur den Unterricht besteht keine Anwesenheitspflicht. Nach dem Abschluss eines Kurses
-ist eine Pr\"ufung \"uber den Inhalt des Kurses vorgesehen (in der Regel schriftlich  und  m\"undlich abzulegen).\\
+F\"ur den Unterricht besteht keine Anwesenheitspflicht. Nach dem Abschluss eines
+Kurses ist eine Pr\"ufung \"uber den Inhalt des Kurses vorgesehen (in der Regel
+schriftlich  und  m\"undlich abzulegen).\\
 %f\"ur die Absolvierung der Pr\"ufungen keine Zeitfrist.
 
-Die erfolgreiche Absolvierung der Pr\"ufungen f\"ur die Kurse Mathematische Analyse I und II und
-Allgemeine Physik I und II ist Voraussetzung f\"ur die Ablegung der Pr\"ufungen f\"ur die Kurse
-des dritten und vierten Jahres.\\
+Die erfolgreiche Absolvierung der Pr\"ufungen f\"ur die Kurse Mathematische
+Analyse I und II und Allgemeine Physik I und II ist Voraussetzung f\"ur die
+Ablegung der Pr\"ufungen f\"ur die Kurse des dritten und vierten Jahres.\\
 
 Die Zulassung zur Verteidigung der Abschlussarbeit (Diplomarbeit) erfolgt f\"ur
 den Studiengang mit Spezialisierung ``Atomare und Subatomare Physik'' nach der
